--- a/css/styles.css
+++ b/css/styles.css
@@ -149,9 +149,13 @@ body {
 
 .articles-container {
   margin-top: 2rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .card {
+  width: calc(50% - 1rem);
   margin-bottom: 2rem;
 }
 
