--- a/css/styles.css
+++ b/css/styles.css
@@ -181,6 +181,12 @@ body {
 .btn {
   padding: 1rem 2rem;
   font-size: 1.2em;
+  color: #f39c12;
+  border-radius: 2rem;
+  margin-right: .5rem;
+  display: inline-block;
+  border: 4px solid #f39c12;
+  font-weight: bold;
 }
 
 .footer {
