--- a/css/styles.css
+++ b/css/styles.css
@@ -16,8 +16,10 @@ body {
 }
 
 .header {
-  float: left;
-  margin-left: -250px;
+  position: fixed;
+  top: 0;
+  left: 5px;
+  height: 100vh;
   width: 250px;
   background: #f5f5f5;
   border-right: 1px solid rgba(0,0,0,.1);
